<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="tgh.desapp.Create_Event">

    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/login_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form"
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical">

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtNombreEvento"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:maxLength="30"
                    android:hint="@string/nom_evento">
                </EditText>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionUnspecified"
                    android:ems="100"
                    android:maxLength="100"
                    android:id="@+id/txtDescEvento"
                    android:hint="@string/desc_evento"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:ems="10"
                    android:id="@+id/txtFecha"
                    android:hint="@string/fecha_inicio"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionUnspecified"
                    android:ems="10"
                    android:id="@+id/txtHora"
                    android:hint="@string/hora"/>
            </android.support.design.widget.TextInputLayout>
            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/provincia"
                android:id="@+id/textView1"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <Spinner
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ddlProvincia"
                    android:spinnerMode="dropdown" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:imeOptions="actionUnspecified"
                    android:ems="10"
                    android:id="@+id/txtIntegrantes"
                    android:hint="@string/num_participantes"/>
            </android.support.design.widget.TextInputLayout>

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/tipo_pago"
                android:id="@+id/textView"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"/>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingTop="10dp">

                    <RadioButton android:id="@+id/radio_sin_precio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_precio"
                        android:onClick="onRadioButtonClicked"
                        android:checked="true"/>

                    <RadioButton android:id="@+id/radio_paypal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/paypal"
                        android:onClick="onRadioButtonClicked"
                        android:layout_gravity="center_horizontal"
                        android:checked="false" />

                </RadioGroup>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:imeOptions="actionUnspecified"
                    android:id="@+id/txtPrecio"
                    android:hint="@string/precio"
                    android:visibility="gone"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crear_evento"
                android:id="@+id/btnCrearEvento"
                android:layout_gravity="right"
                android:paddingTop="10dp"
                android:onClick="CrearEvento"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
