<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="tgh.desapp.EventosPages.Evento_detalles">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top">

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtNombreEvento"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:maxLines="1"
                android:singleLine="true"
                android:maxLength="30"
                android:hint="@string/nom_evento"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false">
            </EditText>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:imeOptions="actionUnspecified"
                android:ems="100"
                android:maxLength="100"
                android:id="@+id/txtDescEvento"
                android:hint="@string/desc_evento"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:ems="10"
                android:id="@+id/txtFecha"
                android:hint="@string/fecha_inicio"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:ems="10"
                android:id="@+id/txtHora"
                android:hint="@string/hora"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/provincia"
            android:id="@+id/textView1"
            android:paddingLeft="5dp"
            android:paddingTop="10dp"/>

        <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ddlProvincia"
                android:spinnerMode="dropdown"
                android:enabled="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</FrameLayout>
