<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:gravity="center_horizontal"
    android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" tools:context="tgh.desapp.LoginActivity">

    <!-- Login progress -->


    <ProgressBar android:id="@+id/Register_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone" />

    <ScrollView android:id="@+id/register_form" android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:id="@+id/imgPerfil"
                android:src="@drawable/default_profile_pic" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtNombre" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_nombre"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified" android:inputType="text"
                    android:maxLines="1" android:singleLine="true"
                    android:maxLength="24"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtApodo" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_apodo"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified" android:inputType="text"
                    android:maxLines="1" android:singleLine="true"
                    android:maxLength="24"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtEmail" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_emaill"
                    android:imeActionId="@+id/login"
                    android:imeOptions="actionUnspecified" android:inputType="textEmailAddress"
                    android:maxLines="1" android:singleLine="true"
                    android:maxLength="24"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText android:id="@+id/txtPassword" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_register_activity"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    android:maxLength="16"/>

            </android.support.design.widget.TextInputLayout>

            <Button android:id="@+id/btnRegistrar" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:layout_marginTop="16dp" android:text="@string/action_register_activity"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/lblMessage"
                android:layout_gravity="center_horizontal"
                android:textColor="#e51919" />

            <android.widget.Space
                android:layout_width="match_parent"
                android:layout_height="100dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
